[gd_scene load_steps=7 format=3 uid="uid://b336fup0h7gp5"]

[ext_resource type="Texture2D" uid="uid://c282obbfo5jrj" path="res://assets/island/collapsable_wall/bricks.png" id="1_ghv8o"]
[ext_resource type="Script" uid="uid://b8kbi0bog5jnd" path="res://objects/collapsable_wall/collapsable_wall.gd" id="1_heo48"]
[ext_resource type="AudioStream" uid="uid://6jhhcbxb10mi" path="res://assets/sounds/Hitting Wall.wav" id="3_bfbso"]
[ext_resource type="PackedScene" uid="uid://demnc46qmnrje" path="res://objects/collapsable_wall/dust_effect.tscn" id="5_bno5q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_heo48"]
size = Vector2(64, 130)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bno5q"]
size = Vector2(87, 129)

[node name="CollapsableWall" type="StaticBody2D"]
script = ExtResource("1_heo48")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ghv8o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_heo48")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-11.5, -0.5)
shape = SubResource("RectangleShape2D_bno5q")

[node name="BreakSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_bfbso")

[node name="DustEffect" parent="." instance=ExtResource("5_bno5q")]
visible = false

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
